# sourcery

./: .gitignore  404.html  AGENTS.md  CODE_EXAMPLES.md  LICENSE  README.md  USAGE.md  benchmark_compare.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: docs.yml  publish.yml
architecture/pipeline-internals/: index.html  index.md
architecture/runtime-internals/: index.html  index.md
architecture/system-overview/: index.html  index.md
docs/: index.md
docs/architecture/: pipeline-internals.md  runtime-internals.md  system-overview.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: benchmarking.md  build-a-pipeline.md  ingestion.md  outputs-and-reviewer.md  runtime-and-tuning.md  testing-and-validation.md
docs/reference/: data-contracts.md  error-model.md  file-by-file-map.md  public-api.md
examples/notebooks/: sourcery_pdf_workflow.ipynb  sourcery_quickstart.ipynb
getting-started/installation/: index.html  index.md
getting-started/quickstart/: index.html  index.md
guides/benchmarking/: index.html  index.md
guides/build-a-pipeline/: index.html  index.md
guides/code-examples/: index.html  index.md
search/: search_index.json
sourcery/: __init__.py  api.py  exceptions.py
tests/: conftest.py  test_aligner.py  test_api.py  test_benchmarks.py  test_blackgeorge_runtime.py  test_chunking.py  test_contracts.py  test_engine.py  test_example_validator.py  test_ingest.py  test_io.py  test_merger.py  test_model_gateway.py  test_runtime_errors.py
(+50 files in other folders)
